best-practices/require_ro_rootfs/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../require_ro_rootfs.yaml
assert:
- policy-assert.yaml
