best-practices/require_ro_rootfs/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' require_ro_rootfs.yaml | kubectl create -f -
