best-practices/require_ro_rootfs/e2e/good-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-roroot
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-roroot
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
  - name: busybox-again
    image: busybox:1.35
    securityContext:
      readOnlyRootFilesystem: true
